--- a/examples/1.node_collector_processor.md
+++ b/examples/1.node_collector_processor.md
@@ -8,19 +8,16 @@ You can use the `NodesCollectorProcessor` class within a Python script as follow
 from chemgraphbuilder.nodes_collector_processor import NodesCollectorProcessor
 from chemgraphbuilder.setup_data_folder import SetupDataFolder
 
-# Set the connection details and parameters
-uri = "bolt://localhost:7689"
-username = "neo4j"
-password = "your_password"
+
 node_type = "Compound"  # Change to "BioAssay", "Gene", or "Protein" as needed
 enzyme_list = ['CYP2D6', 'CYP3A4']
 
-# Initialize and setup the data directory
+# Initialize and setup the data directory before collecting any data
 setup_folder = SetupDataFolder()
 setup_folder.setup()
 
 # Initialize the collector
-collector = NodesCollectorProcessor(uri=uri, username=username, password=password, node_type=node_type, enzyme_list=enzyme_list)
+collector = NodesCollectorProcessor(node_type=node_type, enzyme_list=enzyme_list)
 
 # Collect and process the data
 collector.collect_and_process_data()
@@ -35,8 +32,9 @@ collector.close()
 You can use the `NodesCollectorProcessor` class from the command line by executing the script with the necessary arguments:
 
 ```sh
-setup-data-folder 
-collect-process-nodes --uri bolt://localhost:7689 --username neo4j --password your_password --node_type Compound --enzyme_list CYP2D6,CYP3A4
+setup-data-folder
+collect-process-nodes --node_type Compound --enzyme_list CYP2D6,CYP3A4
 ```
 
-Make sure to replace `"your_password"` with the actual password for your Neo4j database. The `node_type` argument can be one of `"Compound"`, `"BioAssay"`, `"Gene"`, or `"Protein"`, depending on the type of data you want to collect. The `enzyme_list` should be a comma-separated string of enzyme names.
+The `node_type` argument can be one of `"Compound"`, `"BioAssay"`, `"Gene"`, or `"Protein"`, depending on the type of data you want to collect. 
+The `enzyme_list` should be a comma-separated string of enzyme names.
