--- a/docs/1.node_collector_processor.md
+++ b/docs/1.node_collector_processor.md
@@ -5,7 +5,7 @@ You can use the `NodesCollectorProcessor` class in both Python and the command l
 You can use the `NodesCollectorProcessor` class within a Python script as follows:
 
 ```python
-from chemgraphbuilder.nodes_collector_processor import NodesCollectorProcessor
+from chemgraphbuilder.node_collector_processor import NodesCollectorProcessor
 from chemgraphbuilder.setup_data_folder import SetupDataFolder
 
 
@@ -17,7 +17,7 @@ setup_folder = SetupDataFolder()
 setup_folder.setup()
 
 # Initialize the collector
-collector = NodesCollectorProcessor(node_type=node_type, enzyme_list=enzyme_list)
+collector = NodesCollectorProcessor(node_type=node_type, enzyme_list=enzyme_list, start_chunk=0)
 
 # Collect and process the data
 collector.collect_and_process_data()
@@ -33,8 +33,10 @@ You can use the `NodesCollectorProcessor` class from the command line by executi
 
 ```sh
 setup-data-folder
-collect-process-nodes --node_type Compound --enzyme_list CYP2D6,CYP3A4
+collect-process-nodes --node_type Compound --enzyme_list CYP2D6,CYP3A4 --start_chunk 0 # the default start-chunk is 0
 ```
 
-The `node_type` argument can be one of `"Compound"`, `"BioAssay"`, `"Gene"`, or `"Protein"`, depending on the type of data you want to collect. 
+The `node_type` argument can be one of `"Compound"`, `"BioAssay"`, `"Gene"`, or `"Protein"`, depending on the type of data you want to collect.
 The `enzyme_list` should be a comma-separated string of enzyme names.
+The `start_chunk` argument is optional and is used when collecting data for the `Compound` type because the compound data is downloaded as chunks.
+If you weren't able to download all the data at once, you can continue the download starting from the desired chunk.
