--- a/examples/2.relationship_collector_processor.md
+++ b/examples/2.relationship_collector_processor.md
@@ -1,4 +1,4 @@
-# Relationship Collector and Processor
+# Relationships Collector and Processor
 
 This module collects and processes relationship data for different types of relationships using the `RelationshipPropertiesExtractor` and `RelationshipDataProcessor` classes.
 
@@ -16,16 +16,16 @@ This module collects and processes relationship data for different types of rela
 
 ### Python
 
-To use the `RelationshipCollectorProcessor` class in Python, follow the example below:
+To use the `RelationshipsCollectorProcessor` class in Python, follow the example below:
 
 ```python
-from relationship_collector_processor import RelationshipCollectorProcessor
+from relationship_collector_processor import RelationshipsCollectorProcessor
 
 # Set the relationship type
 relationship_type = "Assay_Compound"  # Change to the desired relationship type
 
 # Initialize the collector
-collector = RelationshipCollectorProcessor(relationship_type=relationship_type)
+collector = RelationshipsCollectorProcessor(relationship_type=relationship_type, start_chunk=0)
 
 # Collect and process the relationship data
 collector.collect_relationship_data()
@@ -37,7 +37,10 @@ To collect and process relationship data from the command line, use the followin
 
 ```sh
 # Collect and process the relationship data for the specified relationship type
-collect-process-relationships --relationship_type Assay_Compound
+collect-process-relationships --relationship_type Assay_Compound --start_chunk 0
 ```
 
 Replace `Assay_Compound` with any of the available relationship types to collect different data.
+If your data is downloaded as chunks and you were not able to complete the 
+download at once, you can use the `start_chunk` argument to specify the starting 
+chunk index and continue the download.
