--- a/docs/2.relationship_collector_processor.md
+++ b/docs/2.relationship_collector_processor.md
@@ -5,12 +5,15 @@ This module collects and processes relationship data for different types of rela
 ## Available Relationship Types
 
 - Assay_Compound
-- Assay_Enzyme
-- Gene_Enzyme
+- Assay_Gene
+- Gene_Protein
 - Compound_Gene
 - Compound_Similarity
-- Compound_Cooccurrence
+- Compound_Compound_Cooccurrence
+- Compound_Gene_Cooccurrence
+- Compound_Gene_Interaction
 - Compound_Transformation
+
 
 ## Usage Examples
 
