--- a/docs/4.graph_relationships_loader.md
+++ b/docs/4.graph_relationships_loader.md
@@ -3,14 +3,16 @@
 ### Usage in Different Contexts
 
 #### **Available Relationships**
-- `Assay_Gene`
+
 - `Assay_Compound`
+- `Assay_Gene`
+- `Gene_Protein`
 - `Compound_Gene`
+- `Compound_Similarity`
+- `Compound_Compound_Cooccurrence`
+- `Compound_Gene_Cooccurrence`
+- `Compound_Gene_Interaction`
 - `Compound_Transformation`
-- `Gene_Enzyme`
-- `Compound_Similarities`
-- `Cpd_Cpd_CoOccurence`
-- `Cpd_Gene_CoOccurence`
 
 #### 1. **Python Code**
 
