--- a/docs/3.graph_nodes_loader.md
+++ b/docs/3.graph_nodes_loader.md
@@ -2,7 +2,7 @@
 
 ### Usage in Different Contexts
 
-#### **Available Relationships**
+#### **Available Nodes**
 - `Compound`
 - `BioAssay`
 - `Gene`
