--- a/docs/1.node_collector_processor.md
+++ b/docs/1.node_collector_processor.md
@@ -1,5 +1,11 @@
 You can use the `NodesCollectorProcessor` class in both Python and the command line:
 
+#### **Available Nodes**
+- `Compound`
+- `BioAssay`
+- `Gene`
+- `Protein`
+
 ### Python Script Example
 
 You can use the `NodesCollectorProcessor` class within a Python script as follows:
